fixed potato alignment

--- a/styles.css
+++ b/styles.css
@@ -1071,8 +1071,8 @@ h3 {
 
 .building-name-price {
   display: flex;
-  align-items: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .building-name {
@@ -1083,7 +1083,6 @@ h3 {
 }
 
 .building-price {
-  margin-left: -25px;
   padding-top: 5px;
   color: rgb(209, 73, 73);
   font-weight: bold;
